welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:2: error: not found: value nbDePas
nbDePas=0
^Methods:6: error: not found: value nbDePas
  nbDePas=nbDePas+1;
  ^Methods:9: error: not found: value nbDePas
while (nbDePas!=0){
       ^Methods:11: error: not found: value nbDePas
  nbDePas=nbDePas-1;
  ^